Fixes #1143: Aligned upper settings options and made bottom setting options similar to Google

--- a/src/app/footer-navbar/footer-navbar.component.css
+++ b/src/app/footer-navbar/footer-navbar.component.css
@@ -84,8 +84,8 @@ div a:active {
 }
 
 #fsett a:hover {
-  text-decoration: underline;
-  background-color: white;
+  text-decoration: none;
+  background-color: rgb(0,0,0,0.1);
 }
 
 @media screen and (min-width: 320px) {
